--- a/app/src/main/res/menu/navigation_drawer.xml
+++ b/app/src/main/res/menu/navigation_drawer.xml
@@ -7,14 +7,16 @@
         android:id="@+id/group1"
         android:checkableBehavior="single">
         <item
-            android:id="@+id/item1"
-            android:title="string/title_1"
-            android:checked="true" />
+            android:id="@+id/theme"
+            android:icon="@drawable/ic_baseline_palette_24"
+            android:title="@string/theme" />
         <item
-            android:id="@+id/item2"
-            android:title="string/title_2" />
+            android:id="@+id/share"
+            android:icon="@drawable/ic_baseline_share_24"
+            android:title="@string/share" />
         <item
-            android:id="@+id/item3"
-            android:title="string/title_3" />
+            android:id="@+id/about"
+            android:icon="@drawable/ic_baseline_info_24"
+            android:title="@string/about" />
     </group>
 </menu>
