--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -7,4 +7,10 @@
     <color name="teal_700">#FF018786</color>
     <color name="black">#FF000000</color>
     <color name="white">#FFFFFFFF</color>
+    
+    <color name="orange_500">#FF8D29</color>
+    <color name="orange_700">#FD7B08</color>
+
+    <color name="coal_500">#36454f</color>
+    <color name="coal_700">#2B404E</color>
 </resources>
